--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 android:label="@string/title_activity_person"
                 android:theme="@style/Theme.Soundboardz" />
         <activity
-                android:name=".MainWindow"
+                android:name=".PersonSelector"
                 android:exported="true"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.Soundboardz">
