--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,13 @@
+#
+# Copyright Notice for Soundboardz
+# Copyright (c) at Carina Sophie Schoppe 2023
+# File created on 3/24/23, 11:54 PM by Carina The Latest changes made by Carina on 3/23/23, 12:41 AM All contents of "gradle.properties" are protected by copyright. The copyright law, unless expressly indicated otherwise, is
+# at Carina Sophie Schoppe. All rights reserved
+# Any type of duplication, distribution, rental, sale, award,
+# Public accessibility or other use
+# requires the express written consent of Carina Sophie Schoppe.
+#
+
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
