--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,13 @@
+#
+# Copyright Notice for Soundboardz
+# Copyright (c) at Carina Sophie Schoppe 2023
+# File created on 3/24/23, 11:54 PM by Carina The Latest changes made by Carina on 3/23/23, 12:41 AM All contents of "gradle-wrapper.properties" are protected by copyright. The copyright law, unless expressly indicated otherwise, is
+# at Carina Sophie Schoppe. All rights reserved
+# Any type of duplication, distribution, rental, sale, award,
+# Public accessibility or other use
+# requires the express written consent of Carina Sophie Schoppe.
+#
+
 #Thu Mar 23 00:41:15 CET 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
